[gd_scene load_steps=20 format=2]

[ext_resource path="res://resource/start.wav" type="AudioStream" id=1]
[ext_resource path="res://resource/clear.wav" type="AudioStream" id=2]
[ext_resource path="res://scripts/Main.gd" type="Script" id=3]
[ext_resource path="res://scenes/Enemy.tscn" type="PackedScene" id=4]
[ext_resource path="res://resource/dot.png" type="Texture" id=5]
[ext_resource path="res://resource/hit.wav" type="AudioStream" id=6]
[ext_resource path="res://scripts/Ball.gd" type="Script" id=7]
[ext_resource path="res://resource/get.wav" type="AudioStream" id=8]
[ext_resource path="res://scripts/Player.gd" type="Script" id=9]
[ext_resource path="res://resource/Square.ttf" type="DynamicFontData" id=10]
[ext_resource path="res://resource/player_8.png" type="Texture" id=11]
[ext_resource path="res://resource/player_9.png" type="Texture" id=12]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=2]
size = 50
font_data = ExtResource( 10 )

[sub_resource type="DynamicFont" id=3]
size = 20
font_data = ExtResource( 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 0.5, 0.5 )

[sub_resource type="SpriteFrames" id=7]
animations = [ {
"frames": [ ExtResource( 12 ), ExtResource( 11 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="CircleShape2D" id=8]
radius = 15.7196

[sub_resource type="CircleShape2D" id=9]
radius = 16.7476

[node name="Main" type="Node2D"]
position = Vector2( 0, 0.268982 )
script = ExtResource( 3 )
block_number = Vector2( 6, 8 )
pad_limit_l = 60.0
pad_limit_r = 260.0

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -0.536041
margin_right = 320.0
margin_bottom = 479.464
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="Label" parent="."]
margin_left = 21.4823
margin_top = 21.4335
margin_right = 127.482
margin_bottom = 39.4335
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Score: 000000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScore" type="Label" parent="."]
margin_left = 148.325
margin_top = 21.4335
margin_right = 298.325
margin_bottom = 39.4335
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Highscore: 000000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Label" parent="."]
margin_left = 74.4408
margin_top = 207.0
margin_right = 473.441
margin_bottom = 260.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "clear!!!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreResult" type="RichTextLabel" parent="."]
margin_left = 83.7407
margin_top = 271.645
margin_right = 243.741
margin_bottom = 308.645
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
bbcode_text = "[rainbow]SCORE: 000000"
text = "SCORE: 000000"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Block" parent="." groups=[
"block",
] instance=ExtResource( 4 )]
position = Vector2( 78.7694, 107.108 )
scale = Vector2( 32, 10 )

[node name="Ball" type="KinematicBody2D" parent="."]
modulate = Color( 1, 0, 0, 1 )
position = Vector2( 157.886, 329.939 )
scale = Vector2( 6, 6 )
script = ExtResource( 7 )

[node name="Sprite" type="Sprite" parent="Ball"]
texture = ExtResource( 5 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ball"]
shape = SubResource( 4 )

[node name="HitSound" type="AudioStreamPlayer" parent="Ball"]
stream = ExtResource( 6 )

[node name="Pad" parent="." groups=[
"pad",
] instance=ExtResource( 4 )]
position = Vector2( 156.986, 417.113 )
scale = Vector2( 64, 12 )

[node name="Walls" type="Node2D" parent="."]

[node name="Wall" parent="Walls" groups=[
"wall",
] instance=ExtResource( 4 )]
position = Vector2( 160, 60.7305 )
scale = Vector2( 280, 8 )

[node name="Wall2" parent="Walls" groups=[
"wall",
] instance=ExtResource( 4 )]
position = Vector2( 24, 260.731 )
scale = Vector2( 8, 400 )

[node name="Wall3" parent="Walls" groups=[
"wall",
] instance=ExtResource( 4 )]
position = Vector2( 296, 260.731 )
scale = Vector2( 8, 400 )

[node name="Player" type="KinematicBody2D" parent="."]
position = Vector2( 160, 230 )
script = ExtResource( 9 )
default_speed = 200.0

[node name="AnimatedSprite" type="AnimatedSprite" parent="Player"]
scale = Vector2( 3, 3 )
frames = SubResource( 7 )
playing = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0, -0.883076 )
shape = SubResource( 8 )

[node name="Area2D" type="Area2D" parent="Player"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/Area2D"]
shape = SubResource( 9 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="Player"]
stream = ExtResource( 8 )

[node name="Start" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 1 )

[node name="Clear" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
